@@ -30,7 +30,7 @@ m4_define([gtk_binary_version], [2.4.0])
 
 # required versions of other packages
 m4_define([glib_required_version], [2.4.0])
-m4_define([pango_required_version], [1.4.0])
+m4_define([pango_required_version], [1.5.1])
 m4_define([atk_required_version], [1.0.1])
 
 
